papyrus2/css/p.css
.p-bg-solid-dark {
  background-color: rgb(25, 22, 20);
  color: white;
}

.p-bg-solid-dark::selection {
  background: white;
}
.p-bg-solid-dark::-moz-selection {
  background: white;
}

.p-layout-top-nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}

.p-layout-bottom-nav {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
}

.p-layout-full-screen {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}


ul.p-nav-vert {
  margin: 33px 0;
}
ul.p-nav-vert li {
  display: block;
  padding: 16.5px 0;
  opacity: 0.66;
  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
  margin: 0 15px;
  text-align: center;
  font-size: 28px;
  line-height: 28px;
}
ul.p-nav-vert li:last-child,
ul.p-nav-vert li a {
  border: 0;
}

.p-nav-horiz li {
  display: inline-block;
  opacity: 0.5;
}
.p-nav-horiz li:hover {
  opacity: 1;
}
.p-keyboard-key {
  font-style: italic;
  border-bottom: 17px solid rgb(255, 255, 255);
  border-right: 17px solid transparent;
  padding: 5px;
  color: white;
  background-color: rgb(25, 22, 20);
}
.p-keyboard-key:hover {
  border-bottom-color: rgb(221, 44, 74);
  border-right-color: rgba(255, 255, 255, 0.1);
}
.p-keyboard-key:active {
  position: relative;
  top: 11px;
  margin: 0 0 0 11px;
  border-right-width: 6px;
  border-bottom-width: 6px;
}
.p-keyboard-key.p-keyboard-key--mirror {
  border-right: 0;
  border-left: 17px solid transparent;
}
.p-keyboard-key.p-keyboard-key--mirror:hover {
  border-bottom-color: rgb(221, 44, 74);
  border-left-color: rgba(255, 255, 255, 0.1);
}
.p-keyboard-key.p-keyboard-key--mirror:active {
  position: relative;
  top: 11px;
  margin: 0 11px 0 0;
  left: auto;
  border-left-width: 6px;
  border-bottom-width: 6px;
}

.p-welcome-sign {
  /* 350px + 2 * 54px */
  min-height: 458px;
  min-width: 700px;
  height: 100%;
  width: 100%;
  position: relative;
  font-style: italic;
}

.p-welcome-sign .p-welcome-sign-inner {
  height: 350px;
  width: 700px;
  position: absolute;
  left: 50%;
  top: 50%;
  margin-top: -175px;
  margin-left: -350px;
}
.p-welcome-sign figure > img {
  padding: 15px;
  height: inherit;
  border-right: 2px solid rgb(255, 255, 255);
  opacity: 0.5;
}
.p-welcome-sign figure,
.p-welcome-sign section {
  display: inline-block;
  height: 350px;
  width: 350px;
  float: left;
  position: relative;
}
.p-welcome-sign p {
  /* position: absolute; */
  /* bottom: 0; */
}
.p-welcome-sign .p-welcome-sign-slide {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
  background-size: cover;
  background-position: 50%;
  background-repeat: no-repeat;
  opacity: 0.9;
  border: 0;
}
.p-welcome-sign .p-welcome-sign-slide:hover {
  opacity: 1;
}

.p-call-to-action {
  text-align: center;
  opacity: 0.75;
  font-size: 33px;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}
.p-call-to-action:hover {
  opacity: 1;
}

@media (max-width: 700px) {
  .p-welcome-sign {
    min-width: 0;
    min-height: 0;
    overflow: scroll;
  }
  .p-welcome-sign .p-welcome-sign-inner {
    /* The margin is to allow for scrolling when the nav
     * menu might be covering */
    margin: 0;
    width: 100%;
    height: 350px;
    position: static;
  }

  .p-welcome-sign section,
  .p-welcome-sign figure {
    width: 100%;
    height: auto;
    text-align: center;
    float: none;
  }

  .p-welcome-sign figure {
    position: absolute;
    opacity: 0.1;
  }

  .p-welcome-sign img {
    border: 0;
    height: auto;
    max-height: 250px;
    padding: 0;
  }

  .p-welcome-sign p {
    position: static;
  }

  .p-welcome-sign .p-welcome-sign-slide {
    position: fixed !important;
    visibility: hidden !important;
  }
}

